# structkit

./: .coveragerc  .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  WARP.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  struct-schema.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: struct.instructions.md
.github/prompts/: struct.prompt.md
.github/workflows/: deploy-pages.yml  generate-terminal-gifs.yaml  major-tagging.yaml  publish-pypi.yml  push-to-registry.yaml  release-drafter.yaml  run_struct.yaml  struct-generate.yaml  struct-on-gha.yaml  test-script.yaml  z-pre-commit.yaml
docs/: agent-skills.md  articles.md  cli-reference.md  completion.md  configuration.md  contributing.md  custom-structures.md  development.md  environment-variables.md  file-handling.md  funding.md  github-integration.md  hooks.md  index.md  installation.md  known-issues.md  mappings.md  mcp-integration.md  quickstart.md  schema.md  structures.md  template-variables.md  usage.md
docs/blog/posts/: consistent-project-scaffolding-with-structkit.md  scaffold-with-natural-language-structkit-mcp.md  structkit-vs-cookiecutter-vs-copier.md  terraform-module-scaffold-with-structkit.md
docs/examples/: index.md
docs/vhs/: README.md  advanced-features.tape  basic-usage.tape  install.tape  mappings-demo.tape  multiple-mappings.tape  remote-content.tape  schema-generation.tape  yaml-config.tape
examples/: README.md
examples/ai-agent-mcp/: .struct.yaml  README.md
examples/fastapi-service/: .struct.yaml  README.md
examples/github-actions-ci/: .struct.yaml  README.md
examples/python-cli/: .struct.yaml  README.md
examples/terraform-module/: .struct.yaml  README.md
examples/versioned-sources/: .struct.yaml  README.md
examples/versioned-sources/structures/app/: base.yaml  ci.yaml
overrides/stylesheets/: extra.css
scripts/: generate-gifs.sh
site/: index.html  manifest.json  robots.txt  sitemap.xml  structured-data.json  sw.js
site/css/: advanced.css  animations.css  components.css  main.css
site/js/: advanced.js  main.js  phase3.js  search.js
struct_module/: __init__.py  main.py  mcp_server.py
struct_module/commands/: generate.py
struct_module/contribs/github/prompts/: struct.yaml
struct_module/contribs/github/workflows/: run-struct.yaml
struct_module/contribs/project/: generic.yaml
structkit/: completers.py  content_fetcher.py  file_item.py  filters.py  input_store.py  logging_config.py  main.py  mcp_server.py  model_wrapper.py  sources.py  struct_refs.py  template_renderer.py  utils.py
structkit/commands/: __init__.py  completion.py  explain.py  generate.py  generate_schema.py  graph.py  import.py  info.py  init.py  lint.py  list.py  mcp.py  search.py  sources.py  validate.py  vars.py
structkit/contribs/: README.md  ansible-playbook.yaml  chef-cookbook.yaml  ci-cd-pipelines.yaml  cloudformation-files.yaml  docker-files.yaml  documentation-template.yaml  git-hooks.yaml  helm-chart.yaml  kubernetes-manifests.yaml  vagrant-files.yaml
structkit/contribs/configs/: chglog.yaml  codeowners.yaml  devcontainer.yaml  editor-config.yaml  eslint.yaml  jshint.yaml  kubectl.yaml  prettier.yaml
structkit/contribs/github/: templates.yaml
structkit/contribs/github/chatmodes/: plan.yaml
structkit/contribs/github/instructions/: generic.yaml
structkit/contribs/github/prompts/: generic.yaml  react-form.yaml  security-api.yaml  struct.yaml
structkit/contribs/github/workflows/: codeql.yaml  execute-tf-workflow.yaml  labeler.yaml  pre-commit.yaml  release-drafter.yaml  run-struct.yaml  stale.yaml
structkit/contribs/project/: custom-structures.yaml  generic.yaml  go.yaml  java.yaml  n8n.yaml  nodejs.yaml  python.yaml  ruby.yaml  rust.yaml
structkit/contribs/prompts/: run-struct-trigger.yaml
structkit/contribs/terraform/apps/: aws-accounts.yaml  environments.yaml  generic.yaml  github-organization.yaml  init.yaml
structkit/contribs/terraform/modules/: generic.yaml
tests/: test_commands.py  test_commands_more.py  test_completers.py  test_completion_command.py  test_content_fetcher_more.py  test_env_var_cli_args.py  test_env_var_structures_path.py  test_explain_command.py  test_file_item.py  test_file_item_strategies.py  test_filters.py  test_filters_more.py  test_graph_command.py  test_hooks.py  test_init_command.py  test_input_store.py  test_lint_command.py  test_mcp_integration.py  test_messages_and_summary.py  test_model_wrapper.py  test_search_command.py  test_sources_command.py  test_template_helpers.py  test_template_renderer.py  test_utils_more.py
